@@ -13,6 +13,7 @@ module Locations (
 	annexDir,
 	objectDir,
 	gitAnnexLocation,
+	gitAnnexLocationDepth,
 	gitAnnexLink,
 	gitAnnexContentLock,
 	gitAnnexMapping,
@@ -114,6 +115,13 @@ annexLocations config key = map (annexLocation config key) dirHashes
 
 annexLocation :: GitConfig -> Key -> (HashLevels -> Hasher) -> FilePath
 annexLocation config key hasher = objectDir </> keyPath key (hasher $ objectHashLevels config)
+
+{- Number of subdirectories from the gitAnnexObjectDir
+ - to the gitAnnexLocation. -}
+gitAnnexLocationDepth :: GitConfig -> Int
+gitAnnexLocationDepth config = hashlevels + 1
+  where
+	HashLevels hashlevels = objectHashLevels config
 
 {- Annexed object's location in a repository.
  -
